--- a/advace-dom/index.html
+++ b/advace-dom/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta name="google-site-verification" content="JrR1zIt7h3pp-nRuYhyTcIkrE0D1dGY2kbwXBew-tPA" />
+    <meta name="description" content="A modern MINIMALIST demo website built by Garvit Chainani for learning purposes.">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -12,7 +13,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>GARVIT advancedDOM</title>
+    <title>Banist with Minimalist - by Garvit Chainani</title>
 
     <script defer src="script.js"></script>
   </head>
