--- a/advace-dom/index.html
+++ b/advace-dom/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Banist with Minimalist - by Garvit Chainani</title>
+    <title>The bankist minimalist - when bankist meets minimalist</title>
 
     <script defer src="script.js"></script>
   </head>
